fix table open behind timeling

--- a/src/app/@ansyn/ansyn/components/ansyn-footer/ansyn-footer.component.less
+++ b/src/app/@ansyn/ansyn/components/ansyn-footer/ansyn-footer.component.less
@@ -1,6 +1,7 @@
 @import 'ansyn/less/common';
 
 :host {
+	z-index: 5;
 	display: block;
 	position: relative;
 
