--- a/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.less
@@ -1,16 +1,16 @@
 @import "ansyn/less/colors";
 @import 'ansyn/less/common';
 
-@footer-height: 106px;
+@footer-height: 109px;
 @header-size: calc(~"(100vh - @{footer-height}) * 0.025");
 
 :host {
 	z-index: 5;
-	bottom: 81vh;
+	bottom: 93vh;
 	background: @background-color-3;
 	&:extend(.default-menu-item);
-
 	div.results-table {
+
 		width: 100%;
 		color: white;
 		font-size: 13px;
