--- a/src/app/@ansyn/ansyn/modules/menu-items/results/components/results/results.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/results/components/results/results.component.less
@@ -2,7 +2,6 @@
 
 :host {
 	bottom: 0;
-	z-index: 7 !important;
 
 	.results {
 		top: 0;
